Added item about version number bumping for next release.
svn path=/trunk/; revision=4335

--- a/TODO
+++ b/TODO
@@ -788,6 +788,7 @@ The MCD timeline says:
 - next meeting:
  - drumkits
  - consider new beast instruments
+ - when to bump version number?
 - soon:
  - davorgan c++
  - submit 8 thread crasher
