applied updates by Michele Petrecca <michelinux@alice.it>.
Tue May  8 00:23:29 2007  Tim Janik  <timj@gtk.org>

        * it.po: applied updates by Michele Petrecca <michelinux@alice.it>.



svn path=/trunk/; revision=4339

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+Tue May  8 00:23:29 2007  Tim Janik  <timj@gtk.org>
+
+	* it.po: applied updates by Michele Petrecca <michelinux@alice.it>.
+
 Thu Mar 15 01:20:25 2007  Tim Janik  <timj@gtk.org>
 
 	* updated all po files from recent sources.
