--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Thu Jun 21 18:21:33 2007  Stefan Westerfeld  <stefan@space.twc.de>
+
+	* tests/audio/Makefile.am:
+	* tests/audio/artscompressor.ref: Added new test for ArtsCompressor.
+
 Fri Apr 20 14:32:32 2007  Stefan Westerfeld  <stefan@space.twc.de>
 
 	* slowtests: Removed directory that is no longer used from SVN.
