--- a/bse/ChangeLog
+++ b/bse/ChangeLog
@@ -1,3 +1,7 @@
+Sun Jun 24 00:17:40 2007  Stefan Westerfeld  <stefan@space.twc.de>
+
+	* bsemath.h: Added ln (10)/20 constant for ArtsCompressor.
+
 Wed Apr 11 15:46:31 2007  Stefan Westerfeld  <stefan@space.twc.de>
 
 	* bsedatahandle-fir.cc: Fix a bug in seek() spotted by Tim: invalidate
