--- a/plugins/ChangeLog
+++ b/plugins/ChangeLog
@@ -1,3 +1,7 @@
+Sun Jun 24 00:18:52 2007  Stefan Westerfeld  <stefan@space.twc.de>
+
+	* artscompressor.cc: Moved constants to bse/bsemath.h.
+
 Thu Jun 21 18:44:18 2007  Stefan Westerfeld  <stefan@space.twc.de>
 
 	* artscompressor.cc: Replaced log() and exp() calls by constants where
