Add bugzilla link for Bug 450724 : bsewavetool shell iteration capabilities
svn path=/trunk/; revision=4347

--- a/TODO
+++ b/TODO
@@ -793,7 +793,7 @@ The MCD timeline says:
  - davorgan c++            http://bugzilla.gnome.org/show_bug.cgi?id=433311
  - pitch for bsewavetool   http://bugzilla.gnome.org/show_bug.cgi?id=450490
    "fine-tune" xinfo
- - loop chunks with shell script
+ - loop chunks with shell script  http://bugzilla.gnome.org/show_bug.cgi?id=450724
  --------------------------------
 if user lists chunks:
 
