--- a/TODO
+++ b/TODO
@@ -790,8 +790,8 @@ The MCD timeline says:
  - consider new beast instruments
  - when to bump version number?
 - soon:
- - davorgan c++            http://bugzilla.gnome.org/show_bug.cgi?id=433311
- - pitch for bsewavetool   http://bugzilla.gnome.org/show_bug.cgi?id=450490
+ - davorgan c++                   http://bugzilla.gnome.org/show_bug.cgi?id=433311
+ - pitch for bsewavetool          http://bugzilla.gnome.org/show_bug.cgi?id=450490
    "fine-tune" xinfo
  - loop chunks with shell script  http://bugzilla.gnome.org/show_bug.cgi?id=450724
  --------------------------------
@@ -812,7 +812,7 @@ if user matchs chunks (z.B. delete/xinfo):
  - xinfo on bsewave: drum kit play network
  - adsr replay for samples has issues (= attack != 0) -> file bug
  - use sweep for resampler test
-- man page for wavetool
+- man page for wavetool           http://bugzilla.gnome.org/show_bug.cgi?id=437469
 - (1) drum kit
  - beast replays samples at 50% volume if std amp/adsr is used: probably bug
 - (2) drum loops
