--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Sat Jul 14 17:50:06 2007  Stefan Westerfeld  <stefan@space.twc.de>
+
+	* docs/plugin-devel.doxi: Added a small section about how to compile
+	and install a plugin to the plugin development guide.
+
 Fri Jul 13 00:18:09 2007  Stefan Westerfeld  <stefan@space.twc.de>
 
 	* tests/audio/artscompressor.bse: Added this file now, necessary for
