--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2007-07-29  Leonardo Ferreira Fontenelle  <leonardof@svn.gnome.org>
+
+	* pt_BR.po: Brazilian Portugues translation minor enhancement to fix
+	bug #454165.
+
 Tue May  8 00:23:29 2007  Tim Janik  <timj@gtk.org>
 
 	* it.po: applied updates by Michele Petrecca <michelinux@alice.it>.
