bse-alsa: fix make distcheck.
Thu Sep 20 16:09:23 2007  Stefan Westerfeld  <stefan@space.twc.de>

	* tests/audio/Makefile.am: Added a missing file to EXTRA_DIST - beasts
	make distcheck succeeds here now (with po directory alsa patch)

svn path=/trunk/; revision=4394

--- a/drivers/bse-alsa/ChangeLog
+++ b/drivers/bse-alsa/ChangeLog
@@ -1,3 +1,8 @@
+Thu Sep 20 16:51:30 2007  Stefan Westerfeld  <stefan@space.twc.de>
+
+	* configure.in: Tell configure not to search parent directories for
+	possible other configure files - this fixes make distcheck.
+
 2007-09-18 02:50:53  Tim Janik  <timj@gtk.org>
 
 	* updated version to 0.7.2, interface age 0, binary age 0.
